k8s-namespace.yaml
---
# Kubernetes namespace for NHS A&E Analytics
apiVersion: v1
kind: Namespace
metadata:
  name: nhs-ae-analytics
